feat(endpoints): Added first version of `/upload` endpoint
Work-in-progress as backend seems to complain about an incomplete
ZIP stream.

See #9
