# lib/server.ts
@@ -3,6 +3,8 @@ import * as express from 'express';
 import * as bodyParser from 'body-parser';
 import * as cors from 'cors';
 import * as tmp from 'tmp';
+import * as request from 'request';
+import { PassThrough } from 'stream';
 
 import * as catalog from './core/catalog';
 import * as deploy from './core/deploy';
@@ -46,7 +48,7 @@ app.get('/zip', (req, res) => {
     // Create temp dir
     tmp.dir({'unsafeCleanup': true}, (err, tempDir, cleanTempDir) => {
         // Generate contents
-        deploy.apply(resources({}), tempDir, req.query.name, req.query.runtime, normalizeCapabilities(req.query.capabilities))
+        deploy.apply(resources({}), tempDir, req.query.name, req.query.runtime, normalizeCapabilities(req.query.capability))
             .then(() => {
                 // Tell the browser that this is a zip file.
                 res.writeHead(200, {
@@ -60,8 +62,58 @@ app.get('/zip', (req, res) => {
     });
 });
 
+app.post('/launch', (req, res) => {
+    // Make sure we're autenticated
+    if (!req.header('Authorization')) {
+        res.status(401).send(result(400, 'Unauthorized'));
+        return;
+    }
+    // Create temp dir
+    tmp.dir({'unsafeCleanup': true}, (err, tempDir, cleanTempDir) => {
+        // Generate contents
+        deploy.apply(resources({}), tempDir, req.body.name, req.body.runtime, normalizeCapabilities(req.body.capability))
+            .then(() => {
+                const passThru = new PassThrough();
+                // Prepare to zip
+                zipFolder(passThru, tempDir, req.body.name)
+                    .finally(() => cleanTempDir());
+                // Prepare to post
+                const formData = {
+                    'projectName': 'test',
+                    'gitRepository': 'test',
+                    'file': passThru
+                };
+                const auth = {
+                    'bearer': req.header('Authorization').slice(7)
+                };
+                const headers = {
+                };
+                const options = {
+                    'url': 'http://localhost:8080/api/launcher/upload',
+                    formData,
+                    auth,
+                    headers
+                };
+                console.log('OPTIONS ', options);
+                request.post(options, (err2, res2, body) => {
+                        if (err2) {
+                            res.status(200).send(result(200, err2));
+                        } else {
+                            res.status(res2.statusCode).send({'code': res2.statusCode, 'message': res2.statusMessage});
+                        }
+                    })
+                    .on('error', reqErr => reqErr);
+            })
+            .catch(promErr => res.status(500).send(result(500, promErr)));
+    });
+});
+
 function normalizeCapabilities(items) {
-    return Array.isArray(items) ? items.map(i => (i.trim().startsWith('{')) ? JSON.parse(i) : {'module': i}) : [];
+    if (Array.isArray(items)) {
+        return items.map(i => (i.trim().startsWith('{')) ? JSON.parse(i) : {'module': i});
+    } else {
+        return [{'module': items}];
+    }
 }
 
 function result(code, msg) {
